--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Wsgoff</h1>
+        <h1>WS Goff Company Inc</h1>
         <p></p>
 
         <p class="view"><a href="https://github.com/wolfnetworks/wsgoff">View the Project on GitHub <small>wolfnetworks/wsgoff</small></a></p>
