--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Small Business - Start Bootstrap Template</title>
+    <title>WS Goff Company, Inc</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -68,12 +68,14 @@
         <!-- Heading Row -->
         <div class="row">
             <div class="col-md-8">
-                <img class="img-responsive img-rounded" src="http://placehold.it/900x350" alt="">
+                <img class="img-responsive img-rounded" src="http://wsgoff.com/images/content.gif" alt="">
             </div>
             <!-- /.col-md-8 -->
             <div class="col-md-4">
-                <h1>Business Name or Tagline</h1>
-                <p>This is a template that is great for small businesses. It doesn't have too much fancy flare to it, but it makes a great use of the standard Bootstrap core components. Feel free to use this template for any project you want!</p>
+                <h1>WS Goff Company, Inc</h1>
+                <p>Our vast selection of desks, chairs, bookcases, credenzas, cubicles, files and much more offer endless possibilities.</p>
+                <p>Whether a home office, bank, law firm, school, hospital, hotel, casino or government building, we handle jobs large and small.</p>
+                <p>WS Goff also develops bids for GSA and NJ State Contract projects.</p>
                 <a class="btn btn-primary btn-lg" href="#">Call to Action!</a>
             </div>
             <!-- /.col-md-4 -->
@@ -86,7 +88,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="well text-center">
-                    This is a well that is a great spot for a business tagline or phone number for easy access!
+                    Let's Create Your Office Space Together!
                 </div>
             </div>
             <!-- /.col-lg-12 -->
@@ -120,7 +122,8 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <p>Copyright &copy; 2014. All Rights Reserved.</p>
+                    <p>Created by WolfNetworks</p>
                 </div>
             </div>
         </footer>
