--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <p>Our vast selection of desks, chairs, bookcases, credenzas, cubicles, files and much more offer endless possibilities.</p>
                 <p>Whether a home office, bank, law firm, school, hospital, hotel, casino or government building, we handle jobs large and small.</p>
                 <p>WS Goff also develops bids for GSA and NJ State Contract projects.</p>
-                <a class="btn btn-primary btn-lg" href="#">Call to Action!</a>
+                <a class="btn btn-primary btn-lg" href="#">Call Now!</a>
             </div>
             <!-- /.col-md-4 -->
         </div>
@@ -98,20 +98,25 @@
         <!-- Content Row -->
         <div class="row">
             <div class="col-md-4">
-                <h2>Heading 1</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe rem nisi accusamus error velit animi non ipsa placeat. Recusandae, suscipit, soluta quibusdam accusamus a veniam quaerat eveniet eligendi dolor consectetur.</p>
+                <h2>Our Clients</h2>
+                <p>(Client list goes here)</p>
                 <a class="btn btn-default" href="#">More Info</a>
             </div>
             <!-- /.col-md-4 -->
             <div class="col-md-4">
-                <h2>Heading 2</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe rem nisi accusamus error velit animi non ipsa placeat. Recusandae, suscipit, soluta quibusdam accusamus a veniam quaerat eveniet eligendi dolor consectetur.</p>
+                <h2>NJ State Contract</h2>
+                <p>The W.S. Goff Company is proud to represent a number of manufacturers that hold New Jersey state contracts for furnishings.</p>
+                <p>The W.S. Goff Company represents those manufacturers as a selling and installing dealer.</p>
                 <a class="btn btn-default" href="#">More Info</a>
             </div>
             <!-- /.col-md-4 -->
             <div class="col-md-4">
-                <h2>Heading 3</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe rem nisi accusamus error velit animi non ipsa placeat. Recusandae, suscipit, soluta quibusdam accusamus a veniam quaerat eveniet eligendi dolor consectetur.</p>
+                <h2>Located at:</h2>
+                <p>5104 Oakwood Blvd.</p>
+                <p>Mays Landing, N.J. 08330</p>
+                <p>Toll Free: (800) 773-4633</p>
+                <p>Phone: (609) 625-5600</p>
+                <p>Fax: (609) 625-5633</p>
                 <a class="btn btn-default" href="#">More Info</a>
             </div>
             <!-- /.col-md-4 -->
