--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <a href="#">About</a>
                     </li>
                     <li>
-                        <a href="#">Services</a>
+                        <a href="#">Vendors</a>
                     </li>
                     <li>
                         <a href="#">Contact</a>
@@ -98,15 +98,15 @@
         <!-- Content Row -->
         <div class="row">
             <div class="col-md-4">
-                <h2>Our Clients</h2>
-                <p>(Client list goes here)</p>
+                <h2>NJ State Contract</h2>
+                <p>The W.S. Goff Company is proud to represent a number of manufacturers that hold New Jersey state contracts for furnishings.</p>
+                <p>The W.S. Goff Company represents those manufacturers as a selling and installing dealer.</p>
                 <a class="btn btn-default" href="#">More Info</a>
             </div>
             <!-- /.col-md-4 -->
             <div class="col-md-4">
-                <h2>NJ State Contract</h2>
-                <p>The W.S. Goff Company is proud to represent a number of manufacturers that hold New Jersey state contracts for furnishings.</p>
-                <p>The W.S. Goff Company represents those manufacturers as a selling and installing dealer.</p>
+                <h2>Our Clients</h2>
+                <p>(Client list goes here)</p>
                 <a class="btn btn-default" href="#">More Info</a>
             </div>
             <!-- /.col-md-4 -->
