--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>WS Goff Company, Inc</title>
+    <title>W.S. Goff Company, Inc</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -72,11 +72,11 @@
             </div>
             <!-- /.col-md-8 -->
             <div class="col-md-4">
-                <h1>WS Goff Company, Inc</h1>
+                <h1>W.S. Goff Company</h1>
                 <p>Our vast selection of desks, chairs, bookcases, credenzas, cubicles, files and much more offer endless possibilities.</p>
                 <p>Whether a home office, bank, law firm, school, hospital, hotel, casino or government building, we handle jobs large and small.</p>
                 <p>WS Goff also develops bids for GSA and NJ State Contract projects.</p>
-                <a class="btn btn-primary btn-lg" href="#">Call Now!</a>
+                <a class="btn btn-primary btn-lg" href="tel:+18007734633">Call Now!</a>
             </div>
             <!-- /.col-md-4 -->
         </div>
