--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="http://wolfnetworks.github.io/wsgoff/about">About</a>
+                        <a href="#">About</a>
                     </li>
                     <li>
                         <a href="#">Vendors</a>
@@ -68,7 +68,9 @@
         <!-- Heading Row -->
         <div class="row">
             <div class="col-md-8">
-                <img class="img-responsive img-rounded" src="http://wsgoff.com/images/content.gif" alt="">
+                <h1>Our Story</h1>
+                <p>William Spencer Goff founded our company in 1947, as an Underwood office machine dealership in Atlantic City, NJ. As the business began to prosper he added several popular machine lines, and in the 1950's expanded into office furniture.</p>
+                <p>His son, J. Barry Goff took ownership in 1975. Two years later, William's daughter, Sharon Farrell, joined the corporation as head of the Design department. </p>
             </div>
             <!-- /.col-md-8 -->
             <div class="col-md-4">
