--- a/about.html
+++ b/about.html
@@ -67,19 +67,28 @@
 
         <!-- Heading Row -->
         <div class="row">
-            <div class="col-md-8">
+            <div class="col-md-12">
                 <h1>Our Story</h1>
                 <p>William Spencer Goff founded our company in 1947, as an Underwood office machine dealership in Atlantic City, NJ. As the business began to prosper he added several popular machine lines, and in the 1950's expanded into office furniture.</p>
                 <p>His son, J. Barry Goff took ownership in 1975. Two years later, William's daughter, Sharon Farrell, joined the corporation as head of the Design department. </p>
+                <p>In 1979, the firm moved to Pleasantville, NJ.</p>
+                <p>In 1985, the company sold the office machine portion of the business in order to concentrate on the Contract Office Furniture market.</p>
+                <p>J. Barry Goff, Jr. joined the firm in 1990, followed by William S. Goff II in 1994. </p>
+                <p>Marianne Goff was elected President of the company in 1997, establishing the company as WBE certified. </p>
+                <p>In addition to representing over 200 manufacturers in the retail market, we represent a variety of manufacturers under New Jersey State Contract purchasing, including but not limited to AIS, Lacasse, Krueger International, National Office and Steelcase.</p>
+                <p>On October 1, 2001, Marianne Goff was elected Chairman of the Board. At that time, the reins were passed to the third generation of the company's operation upon the election of J. Barry Goff, Jr. as President.</p>
+                <p>Barry Jr. realized his vision for a larger operation, with an expanded showroom and warehouse in 2007 when we relocated to our new facility in Mays Landing, NJ.</p>
+                <p>Our company is proud that the third generation is progressively building upon the solid foundation established in 1947.</p>
+                <p>Our vast selection of desks, chairs, bookcases, credenzas, cubicles, files and much more offer endless possibilities. Whether a home office, bank, law firm, school, hospital, hotel, casino or government building, we handle jobs large and small.</p>
+                <p>W S Goff also develops bids for GSA and NJ State Contract projects. We work with many of the leading office furniture brands including Lacasse, Krueger International, National Office, Steelcase, AIS, Paoli, Stylex, HON and many more!</p>
+                <p>Our new 12,000 square foot facility in Mays Landing, NJ includes a state of the art showroom, complete with design studio, executive offices as well as conference rooms. Our showroom features a full line of the latest innovations in office concepts as well as traditional office furnishings. We also offer a complete studio specializing in space planning and design.</p>
+                <p>Ask us about our design services, delivery and installation. Our friendly and dedicated staff would love to assist you with your plans. Come visit our furniture showroom!</p>
+                <p>W S Goff Co, a third generation family owned and operated business, has provided a wide range of office furniture services to the Southern New Jersey business community since 1947.</p>
+                <p>The company was established in Atlantic City, NJ by William S. Goff.</p>
+                <p>"Corporate structures are changing, the number of office workers continues to increase and their functions and needs constantly evolve. What remains constant in the creation of an efficient office is the ability of the office planner." J. Barry Goff Jr. - President W.S. Goff Company</p>
             </div>
             <!-- /.col-md-8 -->
-            <div class="col-md-4">
-                <h1>W.S. Goff Company</h1>
-                <p>Our vast selection of desks, chairs, bookcases, credenzas, cubicles, files and much more offer endless possibilities.</p>
-                <p>Whether a home office, bank, law firm, school, hospital, hotel, casino or government building, we handle jobs large and small.</p>
-                <p>WS Goff also develops bids for GSA and NJ State Contract projects.</p>
-                <a class="btn btn-primary btn-lg" href="tel:+18007734633">Call Now!</a>
-            </div>
+   
             <!-- /.col-md-4 -->
         </div>
         <!-- /.row -->
@@ -90,7 +99,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="well text-center">
-                    Let's Create Your Office Space Together!
+                    Meet our team!
                 </div>
             </div>
             <!-- /.col-lg-12 -->
@@ -100,25 +109,42 @@
         <!-- Content Row -->
         <div class="row">
             <div class="col-md-4">
-                <h2>NJ State Contract</h2>
-                <p>The W.S. Goff Company is proud to represent a number of manufacturers that hold New Jersey state contracts for furnishings.</p>
-                <p>The W.S. Goff Company represents those manufacturers as a selling and installing dealer.</p>
+                <h4>Barry Goff</h4>
+                <p>President</p>
+                <p>barrygoff@wsgoff.com</p>
+                <p>609-625-5600 ext. 104</p>
+                <br>
+                <h4>Kevin McGettigan</h4>
+                <p>VP, Sales & Marketing</p>
+                <p>kmcgettigan@wsgoff.com</p>
+                <p>609-625-5600 ext. 109</p>
+
                 <!-- <a class="btn btn-default" href="#">More Info</a> -->
             </div>
             <!-- /.col-md-4 -->
             <div class="col-md-4">
-                <h2>Our Clients</h2>
-                <p>(Client list goes here)</p>
+                <h4>Sharon Farrell</h4>
+                <p>V.P. Sales & Design</p>
+                <p>sharonfarrell@wsgoff.com</p>
+                <p>609-625-5600 ext. 107</p>
+                <br>
+                <h4>Jamie Farrell</h4>
+                <p>Salesperson</p>
+                <p>jamiefarrell@wsgoff.com</p>
+                <p>609-625-5600 ext. 108</p>
                 <!-- <a class="btn btn-default" href="#">More Info</a> -->
             </div>
             <!-- /.col-md-4 -->
             <div class="col-md-4">
-                <h2>Located at:</h2>
-                <p>5104 Oakwood Blvd.</p>
-                <p>Mays Landing, N.J. 08330</p>
-                <p>Toll Free: (800) 773-4633</p>
-                <p>Phone: (609) 625-5600</p>
-                <p>Fax: (609) 625-5633</p>
+                <h4>Paul Rimmele</h4>
+                <p>Sr. VP of Sales</p>
+                <p>furniturepaul@wsgoff.com</p>
+                <p>609-625-5600 ext. 105</p>
+                <br>
+                <h4>Diane Berenato</h4>
+                <p>Office Manager</p>
+                <p>dberenato@wsgoff.com</p>
+                <p>609-625-5600 ext. 101</p>
                 <!-- <a class="btn btn-default" href="#">More Info</a> -->
             </div>
             <!-- /.col-md-4 -->
