--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="http://wolfnetworks.github.io/wsgoff/index.html">
                     <img src="http://wolfnetworks.github.io/wsgoff/img/logo.jpg" alt="">
                 </a>
             </div>
@@ -47,7 +47,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="#">About</a>
+                        <a href="http://wolfnetworks.github.io/wsgoff/about.html">About</a>
                     </li>
                     <li>
                         <a href="#">Vendors</a>
