--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="http://wolfnetworks.github.io/wsgoff/index.html">
+                <a class="navbar-brand" href="http://wolfnetworks.github.io/wsgoff/">
                     <img src="http://wolfnetworks.github.io/wsgoff/img/logo.jpg" alt="">
                 </a>
             </div>
