--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="http://wolfnetworks.github.io/wsgoff/about.html">About</a>
+                        <a href="http://wolfnetworks.github.io/wsgoff/about">About</a>
                     </li>
                     <li>
                         <a href="#">Vendors</a>
