--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
+                        <a href="http://wolfnetworks.github.io/wsgoff/">Home</a>
+                    </li>
+                    <li>
                         <a href="http://wolfnetworks.github.io/wsgoff/about">About</a>
                     </li>
                     <li>
