--- a/index.html
+++ b/index.html
@@ -70,15 +70,24 @@
 
         <!-- Heading Row -->
         <div class="row">
+            <div class="col-lg-4">
+                <img src="/home/chris/wsgoff/img/logo2.jpg"></img>
+            </div>
+            <div class="col-lg-8 text-center">
+                <h2><em>South Jersey's Furniture Experts Since 1947</em></h2>
+            </div>
+        </div>
+        <hr>
+
+        <div class="row">
             <div class="col-md-8">
                 <img class="img-responsive img-rounded" src="http://wsgoff.com/images/content.gif" alt="">
             </div>
             <!-- /.col-md-8 -->
             <div class="col-md-4">
-                <h1>W.S. Goff Company</h1>
                 <p>Our vast selection of desks, chairs, bookcases, credenzas, cubicles, files and much more offer endless possibilities.</p>
                 <p>Whether a home office, bank, law firm, school, hospital, hotel, casino or government building, we handle jobs large and small.</p>
-                <p>WS Goff also develops bids for GSA and NJ State Contract projects.</p>
+                <p>W.S. Goff also develops bids for GSA and NJ State Contract projects.</p>
                 <a class="btn btn-primary btn-lg" href="tel:+18007734633">Call Now!</a>
             </div>
             <!-- /.col-md-4 -->
@@ -91,7 +100,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="well text-center">
-                    Let's Create Your Office Space Together!
+                    <strong>Let's Create Your Office Space Together!</strong>
                 </div>
             </div>
             <!-- /.col-lg-12 -->
