--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <!-- Heading Row -->
         <div class="row">
             <div class="col-lg-4">
-                <img src="/home/chris/wsgoff/img/logo2.jpg"></img>
+                <img src="http://wolfnetworks.github.io/wsgoff/img/logo2.jpg"></img>
             </div>
             <div class="col-lg-8 text-center">
                 <h2><em>South Jersey's Furniture Experts Since 1947</em></h2>
