--- a/about.html
+++ b/about.html
@@ -102,7 +102,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="well text-center">
-                    Meet our team!
+                    <strong>Meet our team!</strong>
                 </div>
             </div>
             <!-- /.col-lg-12 -->
@@ -159,8 +159,8 @@
             <div class="row">
                 <div class="col-lg-12">
                     <hr>
-                    <p>Copyright &copy; 2014. All Rights Reserved.</p>
-                    <p>Created by WolfNetworks</p>
+                    <p><em>Copyright &copy; 2014. All Rights Reserved.</em></p>
+                    <p><em>Created by WolfNetworks</em></p>
                 </div>
             </div>
         </footer>
