--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
             </div>
             <!-- /.col-md-8 -->
             <div class="col-md-4">
+                <br>
                 <p>Our vast selection of desks, chairs, bookcases, credenzas, cubicles, files and much more offer endless possibilities.</p>
                 <p>Whether a home office, bank, law firm, school, hospital, hotel, casino or government building, we handle jobs large and small.</p>
                 <p>W.S. Goff also develops bids for GSA and NJ State Contract projects.</p>
@@ -124,11 +125,12 @@
             <!-- /.col-md-4 -->
             <div class="col-md-4">
                 <h2>Located at:</h2>
-                <p>5104 Oakwood Blvd.</p>
-                <p>Mays Landing, N.J. 08330</p>
-                <p>Toll Free: (800) 773-4633</p>
-                <p>Phone: (609) 625-5600</p>
-                <p>Fax: (609) 625-5633</p>
+                <p>5104 Oakwood Blvd</p>
+                <p>Mays Landing, NJ 08330</p>
+                <p><span class="glyphicon glyphicon-earphone"></span> Toll Free: (800) 773-4633</p>
+                <p><span class="glyphicon glyphicon-earphone"></span> Phone: (609) 625-5600</p>
+                <p><span class="glyphicon glyphicon-print"></span> Fax: (609) 625-5633</p>
+                <a target="_blank" title="follow me on facebook" href="https://www.facebook.com/WS-Goff-Company-Inc-311748062174072/"><img alt="follow me on facebook" src="https://c866088.ssl.cf3.rackcdn.com/assets/badgefacebook.png" border=0></a>
                 <!-- <a class="btn btn-default" href="#">More Info</a> -->
             </div>
             <!-- /.col-md-4 -->
@@ -140,8 +142,8 @@
             <div class="row">
                 <div class="col-lg-12">
                     <hr>
-                    <p>Copyright &copy; 2014. All Rights Reserved.</p>
-                    <p>Created by WolfNetworks</p>
+                    <p><em>Copyright &copy; 2014. All Rights Reserved.</em></p>
+                    <p><em>Created by WolfNetworks</em></p>
                 </div>
             </div>
         </footer>
