--- a/about.html
+++ b/about.html
@@ -72,6 +72,7 @@
         <div class="row">
             <div class="col-md-12">
                 <h1>Our Story</h1>
+                <hr>
                 <p>William Spencer Goff founded our company in 1947, as an Underwood office machine dealership in Atlantic City, NJ. As the business began to prosper he added several popular machine lines, and in the 1950's expanded into office furniture.</p>
                 <p>His son, J. Barry Goff took ownership in 1975. Two years later, William's daughter, Sharon Farrell, joined the corporation as head of the Design department. </p>
                 <p>In 1979, the firm moved to Pleasantville, NJ.</p>
@@ -113,41 +114,41 @@
         <div class="row">
             <div class="col-md-4">
                 <h4>Barry Goff</h4>
-                <p>President</p>
-                <p>barrygoff@wsgoff.com</p>
-                <p>609-625-5600 ext. 104</p>
+                <p><strong>President</strong></p>
+                <p><span class="glyphicon glyphicon-envelope"></span> barrygoff@wsgoff.com</p>
+                <p><span class="glyphicon glyphicon-earphone"></span> 609-625-5600 ext. 104</p>
                 <br>
                 <h4>Kevin McGettigan</h4>
-                <p>VP, Sales & Marketing</p>
-                <p>kmcgettigan@wsgoff.com</p>
-                <p>609-625-5600 ext. 109</p>
+                <p><strong>VP, Sales & Marketing</strong></p>
+                <p><span class="glyphicon glyphicon-envelope"></span> kmcgettigan@wsgoff.com</p>
+                <p><span class="glyphicon glyphicon-earphone"></span> 609-625-5600 ext. 109</p>
 
                 <!-- <a class="btn btn-default" href="#">More Info</a> -->
             </div>
             <!-- /.col-md-4 -->
             <div class="col-md-4">
                 <h4>Sharon Farrell</h4>
-                <p>V.P. Sales & Design</p>
-                <p>sharonfarrell@wsgoff.com</p>
-                <p>609-625-5600 ext. 107</p>
+                <p><strong>V.P. Sales & Design</strong></p>
+                <p><span class="glyphicon glyphicon-envelope"></span> sharonfarrell@wsgoff.com</p>
+                <p><span class="glyphicon glyphicon-earphone"></span> 609-625-5600 ext. 107</p>
                 <br>
                 <h4>Jamie Farrell</h4>
-                <p>Salesperson</p>
-                <p>jamiefarrell@wsgoff.com</p>
-                <p>609-625-5600 ext. 108</p>
+                <p><strong>Salesperson</strong></p>
+                <p><span class="glyphicon glyphicon-envelope"></span> jamiefarrell@wsgoff.com</p>
+                <p><span class="glyphicon glyphicon-earphone"></span> 609-625-5600 ext. 108</p>
                 <!-- <a class="btn btn-default" href="#">More Info</a> -->
             </div>
             <!-- /.col-md-4 -->
             <div class="col-md-4">
                 <h4>Paul Rimmele</h4>
-                <p>Sr. VP of Sales</p>
-                <p>furniturepaul@wsgoff.com</p>
-                <p>609-625-5600 ext. 105</p>
+                <p><strong>Sr. VP of Sales</strong></p>
+                <p><span class="glyphicon glyphicon-envelope"></span> furniturepaul@wsgoff.com</p>
+                <p><span class="glyphicon glyphicon-earphone"></span> 609-625-5600 ext. 105</p>
                 <br>
                 <h4>Diane Berenato</h4>
-                <p>Office Manager</p>
-                <p>dberenato@wsgoff.com</p>
-                <p>609-625-5600 ext. 101</p>
+                <p><strong>Office Manager</strong></p>
+                <p><span class="glyphicon glyphicon-envelope"></span> dberenato@wsgoff.com</p>
+                <p><span class="glyphicon glyphicon-earphone"></span> 609-625-5600 ext. 101</p>
                 <!-- <a class="btn btn-default" href="#">More Info</a> -->
             </div>
             <!-- /.col-md-4 -->
