--- a/about.html
+++ b/about.html
@@ -53,10 +53,10 @@
                         <a href="http://wolfnetworks.github.io/wsgoff/about">About</a>
                     </li>
                     <li>
-                        <a href="#">Vendors</a>
+                        <a href="http://wolfnetworks.github.io/wsgoff/vendors">Vendors</a>
                     </li>
                     <li>
-                        <a href="#">Contact</a>
+                        <a href="http://wolfnetworks.github.io/wsgoff/contact">Contact</a>
                     </li>
                 </ul>
             </div>
