--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,7 @@
         <!-- Heading Row -->
         <div class="row">
             <div class="col-md-12">
-                <!-- CONTENT -->
+            <h1>(Contact Form goes here)</h1>
             </div>
             <!-- /.col-md-8 -->
    
@@ -85,7 +85,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="well text-center">
-                    <strong>Vendor Page Coming Soon..</strong>
+                    <strong>Contact Us</strong>
                 </div>
             </div>
             <!-- /.col-lg-12 -->
@@ -95,17 +95,42 @@
         <!-- Content Row -->
         <div class="row">
             <div class="col-md-4">
-                <!-- CONTENT -->
+                <h4>Barry Goff</h4>
+                <p><strong>President</strong></p>
+                <p><span class="glyphicon glyphicon-envelope"></span> barrygoff@wsgoff.com</p>
+                <p><span class="glyphicon glyphicon-earphone"></span> 609-625-5600 ext. 104</p>
+                <br>
+                <h4>Kevin McGettigan</h4>
+                <p><strong>VP, Sales & Marketing</strong></p>
+                <p><span class="glyphicon glyphicon-envelope"></span> kmcgettigan@wsgoff.com</p>
+                <p><span class="glyphicon glyphicon-earphone"></span> 609-625-5600 ext. 109</p>
+
                 <!-- <a class="btn btn-default" href="#">More Info</a> -->
             </div>
             <!-- /.col-md-4 -->
             <div class="col-md-4">
-                <!-- CONTENT -->
+                <h4>Sharon Farrell</h4>
+                <p><strong>V.P. Sales & Design</strong></p>
+                <p><span class="glyphicon glyphicon-envelope"></span> sharonfarrell@wsgoff.com</p>
+                <p><span class="glyphicon glyphicon-earphone"></span> 609-625-5600 ext. 107</p>
+                <br>
+                <h4>Jamie Farrell</h4>
+                <p><strong>Salesperson</strong></p>
+                <p><span class="glyphicon glyphicon-envelope"></span> jamiefarrell@wsgoff.com</p>
+                <p><span class="glyphicon glyphicon-earphone"></span> 609-625-5600 ext. 108</p>
                 <!-- <a class="btn btn-default" href="#">More Info</a> -->
             </div>
             <!-- /.col-md-4 -->
             <div class="col-md-4">
-                <!-- CONTENT -->
+                <h4>Paul Rimmele</h4>
+                <p><strong>Sr. VP of Sales</strong></p>
+                <p><span class="glyphicon glyphicon-envelope"></span> furniturepaul@wsgoff.com</p>
+                <p><span class="glyphicon glyphicon-earphone"></span> 609-625-5600 ext. 105</p>
+                <br>
+                <h4>Diane Berenato</h4>
+                <p><strong>Office Manager</strong></p>
+                <p><span class="glyphicon glyphicon-envelope"></span> dberenato@wsgoff.com</p>
+                <p><span class="glyphicon glyphicon-earphone"></span> 609-625-5600 ext. 101</p>
                 <!-- <a class="btn btn-default" href="#">More Info</a> -->
             </div>
             <!-- /.col-md-4 -->
