--- a/contact.html
+++ b/contact.html
@@ -70,12 +70,23 @@
 
         <!-- Heading Row -->
         <div class="row">
-            <div class="col-md-12">
-            <h1>(Contact Form goes here)</h1>
+            <div class="col-md-8">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3081.6412270292763!2d-74.70000908418949!3d39.43223667949162!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c0c4983c88d995%3A0x5715c5d0236ff207!2sW.+S.+Goff+Company!5e0!3m2!1sen!2sus!4v1460831000614" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
-            <!-- /.col-md-8 -->
-   
-            <!-- /.col-md-4 -->
+
+            <div class="col-md-4">
+            <h1>Our Location:</h1>
+            <br>
+            <p>5104 Oakwood Blvd</p>
+            <p>Mays Landing, NJ 08330</p>
+            <p><span class="glyphicon glyphicon-earphone"></span> Toll Free: (800) 773-4633</p>
+            <p><span class="glyphicon glyphicon-earphone"></span> Phone: (609) 625-5600</p>
+            <p><span class="glyphicon glyphicon-print"></span> Fax: (609) 625-5633</p>
+            <p><span class="glyphicon glyphicon-envelope"></span> Email: sales@wsgoff.com</p>
+            <hr>
+            <a target="_blank" title="follow me on facebook" href="https://www.facebook.com/WS-Goff-Company-Inc-311748062174072/"><img alt="follow me on facebook" src="https://c866088.ssl.cf3.rackcdn.com/assets/badgefacebook.png" border=0></a>
+            </div>
+
         </div>
         <!-- /.row -->
 
@@ -85,7 +96,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="well text-center">
-                    <strong>Contact Us</strong>
+                    <em>Questions, comments, or suggestions? Contact us!</em>
                 </div>
             </div>
             <!-- /.col-lg-12 -->
@@ -95,42 +106,14 @@
         <!-- Content Row -->
         <div class="row">
             <div class="col-md-4">
-                <h4>Barry Goff</h4>
-                <p><strong>President</strong></p>
-                <p><span class="glyphicon glyphicon-envelope"></span> barrygoff@wsgoff.com</p>
-                <p><span class="glyphicon glyphicon-earphone"></span> 609-625-5600 ext. 104</p>
-                <br>
-                <h4>Kevin McGettigan</h4>
-                <p><strong>VP, Sales & Marketing</strong></p>
-                <p><span class="glyphicon glyphicon-envelope"></span> kmcgettigan@wsgoff.com</p>
-                <p><span class="glyphicon glyphicon-earphone"></span> 609-625-5600 ext. 109</p>
-
                 <!-- <a class="btn btn-default" href="#">More Info</a> -->
             </div>
             <!-- /.col-md-4 -->
             <div class="col-md-4">
-                <h4>Sharon Farrell</h4>
-                <p><strong>V.P. Sales & Design</strong></p>
-                <p><span class="glyphicon glyphicon-envelope"></span> sharonfarrell@wsgoff.com</p>
-                <p><span class="glyphicon glyphicon-earphone"></span> 609-625-5600 ext. 107</p>
-                <br>
-                <h4>Jamie Farrell</h4>
-                <p><strong>Salesperson</strong></p>
-                <p><span class="glyphicon glyphicon-envelope"></span> jamiefarrell@wsgoff.com</p>
-                <p><span class="glyphicon glyphicon-earphone"></span> 609-625-5600 ext. 108</p>
                 <!-- <a class="btn btn-default" href="#">More Info</a> -->
             </div>
             <!-- /.col-md-4 -->
             <div class="col-md-4">
-                <h4>Paul Rimmele</h4>
-                <p><strong>Sr. VP of Sales</strong></p>
-                <p><span class="glyphicon glyphicon-envelope"></span> furniturepaul@wsgoff.com</p>
-                <p><span class="glyphicon glyphicon-earphone"></span> 609-625-5600 ext. 105</p>
-                <br>
-                <h4>Diane Berenato</h4>
-                <p><strong>Office Manager</strong></p>
-                <p><span class="glyphicon glyphicon-envelope"></span> dberenato@wsgoff.com</p>
-                <p><span class="glyphicon glyphicon-earphone"></span> 609-625-5600 ext. 101</p>
                 <!-- <a class="btn btn-default" href="#">More Info</a> -->
             </div>
             <!-- /.col-md-4 -->
